Add elasticsearch configuration

--- a/invenio_demosite/base/recordext/fields/atlantis.cfg
+++ b/invenio_demosite/base/recordext/fields/atlantis.cfg
@@ -13,6 +13,10 @@ abstract:
         marc, "520__", {'summary':value['a'], 'expansion':value['b'], 'number':value['9']}
     producer:
         json_for_marc(), {"520__a": "summary", "520__b": "expansion", "520__9": "number"}
+    elasticsearch:
+        highlights: {
+                "abstract": {}
+        }
 
 abstract_french:
     creator:
@@ -106,6 +110,62 @@ _first_author, first_author, creator:
         marc, "100__", { 'full_name':value['a'], 'first_name':util_split(value['a'],',',1), 'last_name':util_split(value['a'],',',0), 'relator_name':value['e'], 'CCID':value['h'], 'INSPIRE_number':value['i'], 'affiliation':value['u'] }
     producer:
         json_for_marc(), {"100__a": "full_name", "100__e": "relator_name", "100__h": "CCID", "100__i": "INSPIRE_number", "100__u": "affiliation"}
+    elasticsearch:
+        mapping: {
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "type": "multi_field",
+                    "fields": {
+                        "first_name": {
+                            "type": "string",
+                            "index": "analyzed"
+                        },
+                        "raw": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
+                },
+                "last_name": {
+                    "type": "multi_field",
+                    "fields": {
+                        "last_name": {
+                            "type": "string",
+                            "index": "analyzed"
+                        },
+                        "raw": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
+                },
+                "full_name": {
+                    "type": "multi_field",
+                    "fields": {
+                        "full_name": {
+                            "type": "string",
+                            "index": "analyzed"
+                        },
+                        "raw": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
+                },
+                "name_variations": {
+                    "type": "string",
+                    "index": "not_analyzed"
+                }
+            }
+        }
+    facets: {
+        "Author": {
+            "terms": {
+                "field": "_first_author.full_name.raw"
+            }
+        }
+    }
 
 _additional_authors, additional_authors, contributor:
     schema:
@@ -127,6 +187,55 @@ authors:
         @connect('_additional_authors', sync_authors)
         @only_if('_firs_author' in self or '_additional_authors' in self)
         util_merge_fields_info_list(self, ['_first_author', '_additional_authors'])
+    elasticsearch: 
+        mapping: {
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "type": "multi_field",
+                    "fields": {
+                        "first_name": {
+                            "type": "string",
+                            "index": "analyzed"
+                        },
+                        "raw": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
+                },
+                "last_name": {
+                    "type": "multi_field",
+                    "fields": {
+                        "last_name": {
+                            "type": "string",
+                            "index": "analyzed"
+                        },
+                        "raw": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
+                },
+                "full_name": {
+                    "type": "multi_field",
+                    "fields": {
+                        "full_name": {
+                            "type": "string",
+                            "index": "analyzed"
+                        },
+                        "raw": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
+                },
+                "name_variations": {
+                    "type": "string",
+                    "index": "not_analyzed"
+                }
+            }
+        }
 
 author_archive:
     creator:
@@ -200,6 +309,18 @@ collections:
         marc, "980__", { 'primary':value['a'], 'secondary':value['b'], 'deleted':value['c'] }
     producer:
         json_for_marc(), {"980__a":"primary", "980__b":"secondary", "980__c":"deleted"}
+    elasticsearch:
+        mapping: {
+            "index": "not_analyzed",
+            "type": "string"
+        }
+        facets: {
+            "Collections": {
+                "terms": {
+                    "field": "collections"
+                }
+            }
+        }
 
 comment:
     creator:
@@ -893,7 +1014,20 @@ title:
         marc, "245__", { 'title':value['a'], 'subtitle':value['b'], 'volume': value['n'], 'form':value['k'] }
     producer:
         json_for_marc(), {"245__a": "title", "245__b": "subtitle", "245__k": "form"}
-
+    elasticsearch:
+        mapping: {
+            "type": "multi_field",
+            "fields": {
+                "title": {
+                    "type": "string",
+                    "index": "analyzed"
+                },
+                "raw": {
+                    "type": "string",
+                    "index": "not_analyzed"
+                }
+            }
+        }
 title_key:
     creator:
         @legacy((("222", "222__", "222__%"), ""),
@@ -1014,6 +1148,10 @@ files:
         file. On the other hand the function that retrieve the metadata from BibDoc could
         be enrich.
         """
+    elasticsearch:
+        mapping: {
+            "type": "nested"
+        }
 
 number_of_authors:
     """Number of authors"""
@@ -1053,3 +1191,21 @@ cited_by_count:
         get_cited_by_count(self.get('recid'))
     description:
         """How many records cite given record"""
+
+@extend
+documents:
+    elasticsearch:
+        mapping: {
+            "type": "nested",
+            "include_in_all": False,
+            "properties": {
+                "fulltext": {
+                    "type": "string",
+                    "index": "analyzed"
+                },
+                "file_name": {
+                    "type": "integer",
+                    "index": "analyzed"
+                }
+            }
+        }
