Add year field in JSONAlchemy

--- a/invenio_demosite/base/recordext/fields/atlantis.cfg
+++ b/invenio_demosite/base/recordext/fields/atlantis.cfg
@@ -159,13 +159,14 @@ _first_author, first_author, creator:
                 }
             }
         }
-    facets: {
-        "Author": {
-            "terms": {
-                "field": "_first_author.full_name.raw"
+        facets: {
+            "Author": {
+                "terms": {
+                    "field": "_first_author.full_name.raw",
+                    "size": 0
+                }
             }
         }
-    }
 
 _additional_authors, additional_authors, contributor:
     schema:
@@ -309,6 +310,9 @@ collections:
         marc, "980__", { 'primary':value['a'], 'secondary':value['b'], 'deleted':value['c'] }
     producer:
         json_for_marc(), {"980__a":"primary", "980__b":"secondary", "980__c":"deleted"}
+
+@extend
+_collections:
     elasticsearch:
         mapping: {
             "index": "not_analyzed",
@@ -317,7 +321,8 @@ collections:
         facets: {
             "Collections": {
                 "terms": {
-                    "field": "collections"
+                    "field": "_collections",
+                    "size": 0
                 }
             }
         }
@@ -1206,6 +1211,21 @@ documents:
                 "file_name": {
                     "type": "integer",
                     "index": "analyzed"
+                }
+            }
+        }
+
+year:
+    calculated:
+        @parse_first('creation_date')
+        @memoize()
+        get_year_from_creation_date(self['creation_date'])
+    elasticsearch:
+        facets: {
+            "Year": {
+                "terms": {
+                    "field": "year",
+                    "size": 0
                 }
             }
         }
