Add new configs

--- a/invenio_demosite/base/recordext/fields/atlantis.cfg
+++ b/invenio_demosite/base/recordext/fields/atlantis.cfg
@@ -14,6 +14,9 @@ abstract:
     producer:
         json_for_marc(), {"520__a": "summary", "520__b": "expansion", "520__9": "number"}
     elasticsearch:
+        mapping: {
+        "type": "object"
+        }
         highlights: {
                 "abstract": {}
         }
@@ -159,14 +162,17 @@ _first_author, first_author, creator:
                 }
             }
         }
-        facets: {
-            "Author": {
-                "terms": {
-                    "field": "_first_author.full_name.raw",
-                    "size": 0
-                }
+    facets: {
+        "Author": {
+            "terms": {
+                "field": "_first_author.full_name.raw",
+                "size": 0
             }
         }
+    }
+    producer:
+        json_for_indexer(), {"squashed": 'squash_all_fields(self["_first_author"])',
+                             "name_variations": 'create_name_variations(self["_first_author"])'  }
 
 _additional_authors, additional_authors, contributor:
     schema:
@@ -237,6 +243,9 @@ authors:
                 }
             }
         }
+    producer:
+        json_for_indexer(), {"squashed": 'squash_all_fields(self["_first_author"])',
+                             "name_variations": 'create_name_variations(self["_first_author"])'  }
 
 author_archive:
     creator:
@@ -633,6 +642,10 @@ keywords:
         marc, "6531_", { 'term': value['a'], 'institute': value['9'] }
     producer:
         json_for_marc(), {"6531_a": "term", "6531_9": "institute"}
+    elasticsearch:
+        mapping: {
+        "type": "object"
+        }
 
 language:
     creator:
@@ -796,7 +809,11 @@ primary_report_number:
         marc, "037__", value['a']
     producer:
         json_for_marc(), {"037__a": ""}
-
+    elasticsearch:
+        mapping: {
+            "type": "string",
+            "index": "not_analyzed"
+        }
 publication_info:
     creator:
         @legacy((("773", "773__", "773__%"), ""),
@@ -845,6 +862,10 @@ reference:
         marc, "999C5", {'doi':value['a'], 'authors':value['h'], 'misc':value['m'], 'issue_number':value['n'], 'order_number':value['o'], 'page':value['p'], 'report_number':value['r'], 'title':value['s'], 'url':value['u'], 'volume':value['v'], 'year':value['y'],}
     producer:
         json_for_marc(), {"999C5a": "doi", "999C5h": "authors", "999C5m": "misc", "999C5n": "issue_number", "999C5o":"order_number", "999C5p":"page", "999C5r":"report_number", "999C5s":"title", "999C5u":"url", "999C5v":"volume", "999C5y": "year"}
+    elasticsearch:
+        mapping: {
+        "type": "object"
+        }
 
 restriction_access:
     creator:
@@ -863,7 +884,16 @@ report_number:
         marc, "088__", {'report_number':value['a'], 'internal':value['9']}
     producer:
         json_for_marc(), {"088__a": "report_number", "088__9": "internal"}
-
+    elasticsearch:
+        mapping: {
+            "type": "object",
+            "properties": {
+                "report_number": {
+                    "type": "string",
+                    "index": "not_analyzed"
+                }
+            }
+       }
 series:
     creator:
         @legacy((("490", "490__", "490__%"), ""),
@@ -1021,18 +1051,24 @@ title:
         json_for_marc(), {"245__a": "title", "245__b": "subtitle", "245__k": "form"}
     elasticsearch:
         mapping: {
-            "type": "multi_field",
-            "fields": {
+            "type": "object",
+            "properties": {
                 "title": {
-                    "type": "string",
-                    "index": "analyzed"
-                },
-                "raw": {
-                    "type": "string",
-                    "index": "not_analyzed"
+                    "type": "multi_field",
+                    "fields": {
+                        "title": {
+                            "type": "string",
+                            "index": "analyzed"
+                        },
+                        "raw": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
                 }
             }
         }
+
 title_key:
     creator:
         @legacy((("222", "222__", "222__%"), ""),
@@ -1218,14 +1254,13 @@ documents:
 year:
     calculated:
         @parse_first('creation_date')
-        @memoize()
-        get_year_from_creation_date(self['creation_date'])
+        self['creation_date'].year
     elasticsearch:
         facets: {
-            "Year": {
-                "terms": {
-                    "field": "year",
-                    "size": 0
+                "Year": {
+                    "terms": {
+                        "field": "year",
+                        "size": 0
+                    }
                 }
             }
-        }
